[BUGFIX] Set correct version in composer

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,10 @@
   "description": "Customizable dashboard which can display dashboard widgets.",
   "license": ["GPL-2.0+"],
   "keywords": ["TYPO3 CMS", "Dashboard"],
+  "version": "0.0.1",
+  "replace": {
+    "dashboard": "self.version"
+  },
   "require": {
     "php": ">=5.5",
     "typo3/cms-core": ">=7.6.2,<8.0"
