--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,16 @@
   "description": "Customizable dashboard which can display dashboard widgets.",
   "license": ["GPL-2.0+"],
   "keywords": ["TYPO3 CMS", "Dashboard"],
+  "require": {
+    "typo3/cms-core": "^8.7"
+  },
   "replace": {
     "dashboard": "self.version"
   },
-  "require": {
-    "typo3/cms": "~8.7"
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "dashboard"
+    }
   },
   "autoload": {
     "psr-4": {
