[!!!] Move away from reserved TYPO3 namespace

--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
   },
   "autoload": {
     "psr-4": {
-      "TYPO3\\CMS\\Dashboard\\": "Classes/"
+      "Pixelant\\Dashboard\\": "Classes/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "TYPO3\\CMS\\Dashboard\\Tests\\": "Tests/"
+      "Pixelant\\Dashboard\\Tests\\": "Tests/"
     }
   }
 }
