[TASK] update composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,12 @@
   "license": ["GPL-2.0+"],
   "keywords": ["TYPO3 CMS", "Dashboard"],
   "require": {
-    "typo3/cms-core": "^8.7"
+    "typo3/cms-core": "^8.7",
+    "typo3/cms-backend": "^8.7",
+    "typo3/cms-extbase": "^8.7",
+    "typo3/cms-lang": "^8.7",
+    "typo3/cms-frontend": "^8.7",
+    "typo3/cms-fluid": "^8.7"
   },
   "replace": {
     "dashboard": "self.version"
