use sys_actions as a requirment

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "typo3/cms-extbase": "^8.7",
     "typo3/cms-lang": "^8.7",
     "typo3/cms-frontend": "^8.7",
-    "typo3/cms-fluid": "^8.7"
+    "typo3/cms-fluid": "^8.7",
+    "typo3/cms-sys-action": "^8.7"
   },
   "replace": {
     "dashboard": "self.version"
